--- a/watchlist.html
+++ b/watchlist.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="hero ">
+        <div class="hero headings ">
             <div class="heading">
                 <h1>My Watchlist</h1>
             </div>
