added loading screen while fetching data

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </header>
     <main>
         <div id="search-results" class="search-results">
+            <h1 id="loader">Loading..</h1>
             <h1 class="instructions">start searching</h1>
         </div>
     </main>
