Improved UX by adding search movies in the watchlist page

--- a/watchlist.html
+++ b/watchlist.html
@@ -24,7 +24,7 @@
     </header>
     <main>
         <div id="watchlist-results" class="search-results">
-            <h1 class="instructions">Your Watchlist seems empty</h1>
+            <h1 class="instructions"></h1>
         </div>
     </main>
 
